--- a/set-app-2/export_presets.cfg
+++ b/set-app-2/export_presets.cfg
@@ -31,16 +31,16 @@ keystore/release_user=""
 keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
-version/name="0.10"
+version/name="0.11"
 package/unique_name="org.godotengine.$genname"
 package/name="Set Trainer 2"
 package/signed=true
 package/classify_as_game=true
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
-launcher_icons/main_192x192="res://set_logo.png"
-launcher_icons/adaptive_foreground_432x432="res://set_logo.png"
-launcher_icons/adaptive_background_432x432="res://set_logo.png"
+launcher_icons/main_192x192="res://logo-small.png"
+launcher_icons/adaptive_foreground_432x432="res://logo-big.png"
+launcher_icons/adaptive_background_432x432="res://logo-big.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 xr_features/hand_tracking=0
