--- a/set-app-2/export_presets.cfg
+++ b/set-app-2/export_presets.cfg
@@ -31,7 +31,7 @@ keystore/release_user=""
 keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
-version/name="0.1.3"
+version/name="0.1.4"
 package/unique_name="org.godotengine.$genname"
 package/name="Ready Set Go!"
 package/signed=true
@@ -39,7 +39,7 @@ package/classify_as_game=true
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
 launcher_icons/main_192x192="res://assets/logo-small.png"
-launcher_icons/adaptive_foreground_432x432="res://assets/logo-big.png"
+launcher_icons/adaptive_foreground_432x432="res://assets/logo-fg.png"
 launcher_icons/adaptive_background_432x432="res://assets/logo-big.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
